# setup-devbox

./: .gitignore  .releaserc.json  CHANGELOG.md  COMMANDS.md  Cargo.toml  Justfile  Makefile  README.md  cliff.toml  commands.md
.github/workflows/: release.yml  test-ci.yaml.yml
src/: logger.rs  main.rs  schema.rs  utils.rs
src/cli/: cmd_enums.rs  mod.rs  type_enums.rs
src/commands/: add.rs  add_interactive.rs  bootstrap.rs  check_updates.rs  edit.rs  generate.rs  help.rs  mod.rs  now.rs  remove.rs  reset.rs  sync.rs  version.rs
src/commands/help/: add_help.rs  bootstrap_help.rs  check_updates_help.rs  installers_help.rs  mod.rs  now_help.rs  remove_help.rs  reset_help.rs
src/config/: mod.rs
src/core/: assets.rs  backup.rs  binary.rs  compression.rs  manage_rc_files.rs  mod.rs  osx_pkg.rs  platform.rs  timestamps.rs
src/engine/: mod.rs
src/engine/configuration/: manager.rs  processor.rs
src/engine/installation/: mod.rs  orchestrator.rs  planner.rs  summary.rs
src/engine/installers/: brew.rs  cargo.rs  errors.rs  factory.rs  fonts.rs  github.rs  go.rs  mod.rs  pip.rs  rustup.rs  shell_run_commands.rs  traits.rs  url.rs  uv.rs
src/engine/uninstaller/: executors.rs  mod.rs  orchestrator.rs
src/fonts/: installer.rs  mod.rs  uninstaller.rs
src/help_details/: add_help.rs  edit_help.rs  generate_help.rs  installers_help.rs  mod.rs  now_help.rs  remove_help.rs  sync_config_help.rs
src/installers/: brew.rs  cargo.rs  fonts.rs  github.rs  go.rs  mod.rs  pip.rs  rustup.rs  shell_run_commands.rs  shellrc.rs  url.rs  uv.rs
src/libs/: config_loading.rs  configuration_manager.rs  font_installer.rs  mod.rs  paths.rs  removal_orchestrator.rs  settings_applier.rs  shell_configurator.rs  shell_manager.rs  state_management.rs  tool_installer.rs  uninstallers.rs
src/libs/config/: mod.rs
src/libs/fonts/: installer.rs  uninstaller.rs
src/libs/settings/: mod.rs
src/libs/state/: manager.rs
src/libs/tools/: mod.rs
src/libs/tools/configuration/: manager.rs  mod.rs  processor.rs
src/libs/tools/installation/: mod.rs  orchestrator.rs  summary.rs
src/libs/tools/uninstaller/: orchestrator.rs
src/libs/utilities/: assets.rs  binary.rs  compression.rs  file_operations.rs  misc_utils.rs  mod.rs  osx_pkg.rs  path_helpers.rs  platform.rs  timestamps.rs
src/schemas/: common.rs  config_manager.rs  configuration_management.rs  fonts.rs  help.rs  help_schema.rs  mod.rs  os_settings.rs  path_resolver.rs  sdb_schema.rs  shell_configuration.rs  state_file.rs  tools.rs  tools_enums.rs  tools_types.rs
src/schemas/tools/: enums.rs  mod.rs  types.rs
src/settings/: mod.rs
src/state/: manager.rs
